infra/k8s/comments-depl.yaml
# for deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: dineshranjanbiswal/comments
---

# for clusterip
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-srv
spec:
  selector:
    app: comments
  ports:
  - name: comments
    protocol: TCP
    port: 8081
    targetPort: 8081
