infra/k8s/event-bus-depl.yaml
# for deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
        image: dineshranjanbiswal/event-bus
---

# for clusterip
apiVersion: v1
kind: Service
metadata:
  name: event-bus-clusterip-srv
spec:
  selector:
    app: event-bus
  ports:
  - name: event-bus
    protocol: TCP
    port: 8085
    targetPort: 8085
