infra/k8s/query-depl.yaml
# for deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: dineshranjanbiswal/query
---

# for clusterip
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-srv
spec:
  selector:
    app: query
  ports:
  - name: query
    protocol: TCP
    port: 8082
    targetPort: 8082
